--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,7 +1,7 @@
 name: example
 description: Example of GradientColoredSlider
 
-version: 1.0.0
+version: 1.0.0+1
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
